--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "seed:dev": "nodemon ./db/seed.js"
+    "seed:dev": "nodemon ./db/seed.js",
+    "start": "node index.js",
+    "start:dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +15,9 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "dotenv": "^15.0.0",
+    "express": "^4.17.2",
+    "morgan": "^1.10.0",
     "pg": "^8.7.1"
   }
 }
